May 10, 2020
  updated jar dependencies

v. 1.0.0, Sep 11, 2019
  -first pipeline version, generate synteny blocks for all species