@@ -20,10 +20,13 @@ repositories {
 }
 
 dependencies {
-    compile 'commons-dbcp:commons-dbcp:1.4'
+    compile 'org.apache.commons:commons-dbcp2:2.7.0'
+    compile 'commons-net:commons-net:3.6'
+    compile 'org.apache.httpcomponents:httpclient:4.5.12'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.springframework:spring-beans:5.1.5.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.1.5.RELEASE'
+    compile 'com.oracle.ojdbc:ojdbc8:19.3.0.0'
+    compile 'org.springframework:spring-beans:5.2.7.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.2.7.RELEASE'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
@@ -32,11 +35,11 @@ jar {
     baseName = myAppName
     manifest {
         attributes(
-            'Built-By': System.getProperty('user.name'),
-            'Built-Date': new Date(),
-            'Built-JDK': System.getProperty('java.version'),
-            'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-            'Main-Class': mainClassName
+                'Built-By': System.getProperty('user.name'),
+                'Built-Date': new Date(),
+                'Built-JDK': System.getProperty('java.version'),
+                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+                'Main-Class': mainClassName
         )
     }
 }
